--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shared",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "guid-typescript": "^1.0.9",
     "typescript": "^4.9.5"
   }
 }
