--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "guid-typescript": "^1.0.9",
+    "mongoose": "^7.0.3",
     "typescript": "^4.9.5"
   }
 }
