--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "mongoose": "^8.2.2",
     "typescript": "^5.4.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   }
 }
