--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^8.2.2",
-    "typescript": "^5.4.3"
+    "@types/express": "^5.0.0",
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1",
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
-    "prettier": "^3.3.3"
+    "prettier": "^3.5.3"
   }
 }
